fix clipboard & better spacing

--- a/sass/boxshadow.scss
+++ b/sass/boxshadow.scss
@@ -24,6 +24,10 @@
                 align-content: center;
                 width: 350px;
                 position: relative;
+                margin-bottom: 10px;
+                margin-left: 10px;
+                padding: 10px;
+                box-shadow: 1px 1px 3px 1px $grey;
                 .shadow-form-title-container {
                     width: 100%;
                     h3 {
